@@ -4,6 +4,7 @@
 
 Version 1.4.21 - SVN
 --------------------
+  - Now allow more than one plugin to control the compose form submit action.
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
